$Id$

2003/11/18 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- should now work with OpenSSL 0.9.6 as well...
- again more work on IPC
- fixed some bugs


2003/11/17 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- module "db" can now read/write binary values from/to streams
- added KeyManager
- added IPCXMLKeyManager, adapted IPCXMLDialog to use it
- fixed a bug in LIST code


2003/11/16 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- fixed several bugs
- continued work on IPC
- module "crypt": added DES


2003/11/15 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- further work on IPC part
- added module "list" (base)


2003/11/13 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- fixed a severe bug in GWEN_Buffer (error in dynamic mode)
- added rmd160 to crypt module
- added padding with ISO 9796-1 (taken from OpenHBCI, the functions introduced
  have originally been written by Fabian Kaiser and adapted for Gwen by me)
- worked on Christian's FIXMEs


2003-11-12  Christian Stimming  <stimming@tuhh.de>

	* configure.ac: Fix -L argument in gwenhyfwar_libs; it was missing
	the /lib suffix.

2003/11/12 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- CVS version now compiles again ;-}


2003/11/11 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- started working on IPC stuff


2003/11/07 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- started working on crypto stuff


2003/11/05 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- fixed a bug in MsgEngine (ReadMessage was not taking segment version into
  account)
- fixed a bug in CSV code (was taking "quote" for "title")

