@@ -1,5 +1,9 @@
 $Id$
 
+2003-11-19  Christian Stimming <stimming@tuhh.de>
+
+	* configure.ac: Add compilation debug argument macro.
+
 2003/11/18 Martin Preuss <martin@libchipcard.de>
 ------------------------------------------------
 - should now work with OpenSSL 0.9.6 as well...
